# TicTacToe

./: CMakeLists.txt  Game.cpp  Game.h  README.md  TicTacToe.cpp  TicTacToe.h
SFML/: CONTROL
SFML/lib/manual-link/: sfml-main.lib
SFML/share/sfml/: vcpkg.spdx.json  vcpkg_abi_info.txt
x64-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
x64-release/.cmake/api/v1/reply/: cache-v2-3d272aea143153521301.json  cache-v2-52409d0fe7d87e2d97ba.json  cmakeFiles-v1-0e71590a00b22b3e437e.json  cmakeFiles-v1-582d9a18300768911ae9.json  codemodel-v2-440233f93c18b71bfb06.json  codemodel-v2-e451b285ac9e2bac19c2.json  index-2025-01-02T16-44-26-0203.json  index-2025-01-02T18-13-36-0296.json  index-2025-02-03T18-41-37-0536.json  target-TicTacToe-Release-5c4d120513109303d370.json  target-TicTacToe-Release-89f021edca378341fb02.json
